Updated contact us page and call to action links

--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -44,11 +44,13 @@
           markets. Founded in 2013 by experienced investment banking
           professionals, we provide state-of-the-art trading solutions.
           <div class="mt-20">
-            <button
-              class="w-28 h-10 bg-[#ffffff] text-black font-bold text-center justify-center items-center"
-            >
-              Get Started
-            </button>
+            <a href="/contactus">
+              <button
+                class="w-28 h-10 bg-white text-black font-bold text-center justify-center items-center"
+              >
+                Get Started
+              </button>
+            </a>
           </div>
         </div>
       </div>
