--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,11 +7,14 @@
         <div class="text-[4rem] max-sm:text-[2rem] font-bold">
           Want to Start <br />a Project?
         </div>
-        <button
-          class="w-28 h-10 bg-[#1DA903] text-white rounded-[5px] text-center justify-center items-center"
-        >
-          Let's talk
-        </button>
+        <a href="/contactus">
+          <button
+    class="w-28 h-10 bg-black text-white font-bold text-center justify-center items-center"
+           >
+    Let's talk
+          </button>
+</a>
+
       </div>
       <div class="flex flex-col">
         <ul class="flex flex-col gap-4 pl-10 max-sm:pr-10 pt-20 max-sm:pt-2 max-sm:pb-6 max-sm:grid max-sm:grid-cols-2 text-sm">
