--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -170,7 +170,7 @@
       </div>
       <div class="">
         <a
-          href="#"
+          href="/contactus"
           class="inline-block px-4 py-2 no-underline hover:text-gray-100"
         >
           CONTACT US
