update ai pages

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -154,7 +154,7 @@
       </div>
       <div class="">
         <a
-          href="#"
+          href="/ai_page"
           class="inline-block px-4 py-2 no-underline hover:text-gray-100"
         >
           AI
@@ -162,7 +162,7 @@
       </div>
       <div class="">
         <a
-          href="#"
+          href="/careers"
           class="inline-block px-4 py-2 no-underline hover:text-gray-100"
         >
           CAREERS
@@ -272,7 +272,7 @@
           <div
             class="flex flex-col gap-y-4 gap-x-8 font-bold text-2xl max-sm:text-4xl"
           >
-            <a href="#" class="hover:text-gray-700">Home</a>
+            <a href="/" class="hover:text-gray-700">Home</a>
             <a href="#" class="hover:text-gray-700">Products</a>
             <div
               class="subheaders ml-8 flex flex-col font-normal text-base/6 max-sm:text-base/8"
