--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,15 +9,16 @@
         </div>
         <a href="/contactus">
           <button
-    class="w-28 h-10 bg-black text-white font-bold text-center justify-center items-center"
-           >
-    Let's talk
+            class="w-28 h-10 bg-black text-white font-bold text-center justify-center items-center"
+          >
+            Let's talk
           </button>
-</a>
-
+        </a>
       </div>
       <div class="flex flex-col">
-        <ul class="flex flex-col gap-4 pl-10 max-sm:pr-10 pt-20 max-sm:pt-2 max-sm:pb-6 max-sm:grid max-sm:grid-cols-2 text-sm">
+        <ul
+          class="flex flex-col gap-4 pl-10 max-sm:pr-10 pt-20 max-sm:pt-2 max-sm:pb-6 max-sm:grid max-sm:grid-cols-2 text-sm"
+        >
           <li>COMPANY</li>
           <li>ABOUT</li>
           <li>CAREERS</li>
@@ -28,18 +29,39 @@
     </div>
     <div class="grid grid-cols-4 max-sm:flex max-sm:flex-wrap">
       <div class="col-span-3">
-        <ul class="flex max-sm:flex-col items-start gap-20 max-sm:gap-4 text-sm max-sm:text-xs font-thin ml-20 max-sm:ml-10">
-          <li class="hover:text-green-600"><a href="">Products & Services</a></li>
-          <li class="hover:text-green-600"><a href=""></a>Corporate Social Responsibility Policy</a></li>
-          <li class="hover:text-green-600"><a href=""></a>Products & Services</a></li>
+        <ul
+          class="flex max-sm:flex-col items-start gap-20 max-sm:gap-4 text-sm max-sm:text-xs font-thin ml-20 max-sm:ml-10"
+        >
+          <li class="hover:text-green-600">
+            <a
+              href="https://algoteq.com/wp-content/uploads/2025/01/Products-Services.pdf"
+              target="_blank"
+              >Products & Services</a
+            >
+          </li>
+          <li class="hover:text-green-600">
+            <a href="/social-policy">Corporate Social Responsibility Policy</a>
+          </li>
+          <li class="hover:text-green-600">
+            <a
+              href="https://algoteq.com/wp-content/uploads/2024/03/Algoteq-Environmental-Impact-Policy.pdf"
+              target="_blank"
+              >Products & Services</a
+            >
+          </li>
         </ul>
       </div>
       <div class="col-span-1 flex gap-5 ml-10 max-sm:mt-10">
-        <a href=""><img src="/images/x-social.svg" alt="x-social" class="h-10"></a>
-        <a href=""><img src="/images/linkedin-social.svg" alt="linkedin-social" class="h-10"></a>
-        <a href=""><img src="/images/github-social.svg" alt="githun-social" class="h-10"></a>
+        <a href="https://x.com/algoteq" target="_blank"
+          ><img src="/images/x-social.svg" alt="x-social" class="h-10"
+        /></a>
+        <a href="https://www.linkedin.com/company/algoteq/" target="_blank"
+          ><img
+            src="/images/linkedin-social.svg"
+            alt="linkedin-social"
+            class="h-10"
+        /></a>
       </div>
     </div>
   </div>
-  
 </footer>
