--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -176,6 +176,14 @@
           CONTACT US
         </a>
       </div>
+      <div class=""></div>
+        <a
+          href="/blog"
+          class="inline-block px-4 py-2 no-underline hover:text-gray-100"
+        >
+          BLOG
+        </a>
+      </div>
     </div>
   </div>
 
