--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -186,8 +186,8 @@
       </div>
     </div>
   </div>
-
-  <div x-data="{ open: false }" class="block cursor-pointer w-44 z-40">
+<div class="max-sm:hidden"></div>
+  <div x-data="{ open: false }" class="block lg:hidden cursor-pointer w-44 z-40">
     <!-- Hamburger Button -->
     <button
       @click="open = !open"
