--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,6 +22,16 @@
     {{ $alpine := resources.Get "alpinejs/cdn.min.js" }}
   <script src="{{ $alpine.RelPermalink }}" defer></script>
   
+  <script
+    defer
+    src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.x.x/dist/cdn.min.js"
+  ></script>
+
+  <!-- Alpine Core -->
+  <script
+    defer
+    src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+  ></script>
 
 
   </body>
