--- a/layouts/ai_page/list.html
+++ b/layouts/ai_page/list.html
@@ -1,7 +1,4 @@
----
-title: "AI"
-draft: false
----
+{{ define "main" }}
 
 <section
   x-data="{ visible: false }"
@@ -91,3 +88,4 @@ draft: false
     </div>
   </div>
 </section>
+{{ end }}
