--- a/layouts/algorithmic-platform/list.html
+++ b/layouts/algorithmic-platform/list.html
@@ -1,3 +1,5 @@
+{{ define "main" }}
+
 <div
   class="mx-auto overflow-hidden w-full bg-[#090619] text-white pb-0 flex flex-col items-center"
   x-data="{ visible: false, shown: false, open: null }"
@@ -360,3 +362,4 @@
   <!-- Divider -->
   <div class="w-full h-1 bg-gradient-to-r from-[#00AA00] to-[#539AFD]"></div>
 </div>
+{{end}}
