--- a/layouts/algorithmic-suite/list.html
+++ b/layouts/algorithmic-suite/list.html
@@ -1,8 +1,4 @@
----
-title: "Algorithm Suite"
-draft: false
----
-
+{{ define "main"}}
 <script
   defer
   src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
@@ -150,3 +146,5 @@ draft: false
     class="w-full h-1 bg-gradient-to-r from-[#00AA00] to-[#539AFD] mt-0"
   ></div>
 </div>
+
+{{end}}
