--- a/layouts/careers/list.html
+++ b/layouts/careers/list.html
@@ -1,7 +1,4 @@
----
-title: "Careers"
-draft: false
----
+{{ define "main"}}
 
 <section class="py-20 px-6 max-w-5xl mx-auto">
   <div class="text-left mb-5">
@@ -93,3 +90,4 @@ draft: false
     </div>
   </div>
 </section>
+{{end}}
