--- a/layouts/matching-engine/list.html
+++ b/layouts/matching-engine/list.html
@@ -1,8 +1,4 @@
----
-title: "Matching Engine"
-draft: false
----
-
+{{ define "main"}}
 <div
   class="matchingEnginePage mx-auto overflow-hidden w-full bg-[#090619] text-white flex flex-col items-center"
 >
@@ -253,3 +249,4 @@ draft: false
     class="w-full h-1 bg-gradient-to-r from-[#00AA00] to-[#539AFD] mt-10"
   ></div>
 </div>
+{{end}}
