--- a/layouts/order_management_system/list.html
+++ b/layouts/order_management_system/list.html
@@ -1,7 +1,4 @@
----
-title: "OrderManagementSystem"
-draft: false
----
+{{ define "main"}}
 
 <!-- Alpine.js for interactivity -->
 <script
@@ -176,3 +173,4 @@ draft: false
     </div>
   </section>
 </div>
+{{end}}
