--- a/layouts/social-policy/list.html
+++ b/layouts/social-policy/list.html
@@ -1,8 +1,4 @@
----
-title: "Social Policy"
-draft: false
----
-
+{{ define "main"}}
 <!-- CSR Policy Page with Collapsing Principles -->
 <section
   id="csr-policy"
@@ -289,3 +285,4 @@ draft: false
     </div>
   </div>
 </section>
+{{end}}
