--- a/layouts/analytics/list.html
+++ b/layouts/analytics/list.html
@@ -1,8 +1,4 @@
----
-title: "Analytics"
-draft: false
----
-
+{{ define "main"}}
 <script
   defer
   src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
@@ -221,3 +217,4 @@ draft: false
     class="w-full h-1 bg-gradient-to-r from-[#00AA00] to-[#539AFD] mt-10"
   ></div>
 </div>
+{{end}}
