--- a/layouts/contactus/list.html
+++ b/layouts/contactus/list.html
@@ -1,7 +1,4 @@
----
-title: "Contact Us"
-draft: false
----
+{{ define "main"}}
 
 <section class="py-20 px-4">
   <div class="max-w-4xl mx-auto text-center mb-10">
@@ -24,3 +21,5 @@ draft: false
     </iframe>
   </div>
 </section>
+
+{{end}}
